https://faang-school.atlassian.net/browse/BJS2-61886